# StreamGuard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  StreamGuard.spec  build.py  config_manager.py  database.py  implementation_plan.md  installer.iss  main.py  pyproject.toml  requirements.txt  sentiment.py  version.py  walkthrough.md  walkthrough_final.md  youtube_engine.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
